--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.2",
   "description": "an js to mimic water wave",
   "main": "lib/water-wave.js",
-  
   "scripts": {
+    "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "ssh":"git@github.com:jack-shanghai/water-wave.git",
+    "ssh": "git@github.com:jack-shanghai/water-wave.git",
     "url": "https://github.com/jack-shanghai/water-wave.git"
   },
   "author": "quakeofchina",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chroma-js": "^2.1.2",
+    "vite": "^2.2.3"
+  }
 }
