--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "lib/water-wave.js",
   "scripts": {
     "dev": "vite",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build",
+    "serve": "vite preview --port 8080",
+    "deploy": " vite build & sh deploy.sh"
   },
   "repository": {
     "type": "git",
